# Mini-GPT

./: .gitignore  CLEANUP_GUIDE.md  ORGANIZATION_COMPLETE.md  PROJECT_MAP.md  README.md  README_OLD.md  REORGANIZATION_PLAN.md  app.py  arclm.py  instruction_training.py  n_training.py  pyproject.toml  query_runtime.py  quick_fine_tuining.py  requirements.txt  setup.py  test.md  test.py  to-start.md  train-importeerd-model.ipynb  train.py  train_quick.py  tuining.py  usage.py
arclm/: __init__.py  _version.py  api.py  cli.py  config.py  config_loader.py  data.py  data_processor.py  diagnostics.py  generator.py  inference.py  instruction_dataset.py  logging.py  model.py  pipeline.py  pipeline_v2.py  regularization.py  tokenizer.py  tracking.py  trainer.py  utils.py
arclm/loaders/: __init__.py  adapters.py  arclm_checkpoint.py  base.py  hf_loader.py  registry.py  safetensors_loader.py  smart_loader.py  state_dict_loader.py
arclm/logics/: __init__.py  and_.py  biconditional.py  exceptions.py  implication.py  model_check.py  not_.py  or_.py  sentence.py  symbol.py
config/: README.md  pre_training.py  tuining.py
data/: README.md  data.txt  data_qa.txt  dataset_inst.txt  example.json  instruction_data.txt  qa.csv
data/cleaned/: extractor.py
data/darabricks-dolly-15k/: prepare.py
datasets/: README.md
docs/: 00_START_HERE.md  API_REFERENCE.md  ARCHITECTURE_DEEP_DIVE.md  DATASET_GUIDE.md  FULL_DOCUMENTATION.md  FULL_FEATURE_GUIDE.md  QUICK_START.md  README.md  START_HERE.md  USAGE.md  VERSIONING.md  last-raport.md
docs/analysis/: ANALYSIS_DOCUMENTATION_INDEX.md  CODE_REVIEW_SUMMARY.md  MINIGPT_TECHNICAL_ANALYSIS.md  TRAINING_MODES_QUICK_REFERENCE.md
docs/books/: MiniGPT Theory Book.docx  gpt-lib-theory-book.md
docs/development/: IMPROVEMENT_LOG.md  RUNNING_AND_TODO.md
docs/implementation/: FINETUNING_QUICK_START.md  PHASE_1_COMPLETE.md  PHASE_1_FINAL_SUMMARY.md  PHASE_1_IMPLEMENTATION_REPORT.md
docs/legacy/: DOCUMENTATION_README.md  PROJECT_MAP.md  README.md  README_INDEX.md
docs/old/: ORGANIZATION_GUIDE.md  ORGANIZATION_SUMMARY.md  REORGANIZATION_COMPLETE.md
docs/overview/: GPT-Huidige-overview.md  HUIDIGE_SITUATIE.md
docs/planning/: IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_ROADMAP.md
docs/reference/: ADVANCED_FEATURES.md  (+1 more)
evaluation/: README.md  diagnostic.py  diagnostic_simple.py  instruction_tuning.py  optimize.py  roadmap.py
examples/: README.md  __init__.py  example1_generation.py  example2_custom_training.py  example3_instruction_training.py  example4_advanced.py  example5_advanced_training.py  example_finetuning.py  full_feature_guide.py  library_workflow.py  load_external_and_finetune.py  prepare_data.py  train_finetune.py  train_pretrain.py
gpt_firstVersions/: gpt_v1.py  gpt_v2.py
gpt_lib/: __init__.py  config.py  data.py  dataset.py  diagnostics.py  generator.py  inference.py  model.py  pipeline.py  tokenizer.py  trainer.py
models/: README.md
notebooks/: analyses_model.ipynb  create_data.py  loading-data.ipynb  loading-model.ipynb  prepare_ins_data.ipynb  testing.ipynb  tokenizer.json  train.ipynb
templates/: index.html
tests/: README.md  test_config.py  test_core.py  test_data_processor.py  test_external_engine.py  test_library_smoke.py  test_p4_1_unified_pipeline.py  test_phase1_implementation.py  test_smart_loader.py
(+10 files in other folders)
