[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arclm"
version = "0.1.0"
description = "A compact PyTorch language-model training and fine-tuning library."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "ArcLM Contributors" }
]
keywords = [
  "language-model",
  "transformer",
  "pytorch",
  "training",
  "fine-tuning",
  "nlp"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.1",
  "numpy>=1.24",
  "sentencepiece>=0.2.0",
  "transformers>=4.38",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "build>=1.2",
  "twine>=5",
]
web = [
  "flask>=3",
]

[project.urls]
Homepage = "https://github.com/Ahmad-Al-Dibo/ArcLM"
Documentation = "https://github.com/Ahmad-Al-Dibo/ArcLM#readme"
Source = "https://github.com/Ahmad-Al-Dibo/ArcLM"
Issues = "https://github.com/Ahmad-Al-Dibo/ArcLM/issues"

[tool.setuptools]
packages = ["arclm", "arclm.logics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
