[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arclm"
dynamic = ["version"]
description = "A compact PyTorch language-model training and fine-tuning library."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
  { name = "Ahmad Al Diboo", link="https://www.linkedin.com/in/ahmadaldibo" }
]
keywords = [
  "language-model",
  "transformer",
  "pytorch",
  "training",
  "fine-tuning",
  "nlp"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.1,<3",
  "numpy>=1.24,<3",
  "sentencepiece>=0.2,<0.3",
  "transformers>=4.38,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "build>=1.2,<2",
  "twine>=5,<7",
]
web = [
  "flask>=3,<4",
]

[project.urls]
Homepage = "https://github.com/ahmad-al-dibo/arclm"
Documentation = "https://github.com/ahmad-al-dibo/arclm#readme"
Source = "https://github.com/ahmad-al-dibo/arclm"
Issues = "https://github.com/ahmad-al-dibo/arclm/issues"

[tool.setuptools]
packages = ["arclm", "arclm.logics", "arclm.loaders"]

[tool.setuptools.dynamic]
version = { attr = "arclm._version.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
